--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 0.25rem;
 }
 
 .App-link {
@@ -35,4 +36,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.input-wrap {
+  width: 80%;
+  display: flex;
+}
+
+.memes {
+  height:calc(100vh - 3.25rem);
+  overflow: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.meme {
+  margin: 5px;
+  cursor: pointer;
+  position: relative;
+}
+
+.meme-title {
+  display:none;
+  position: absolute;
+  width: 100%-10px;
+  bottom: 4px;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.35);
+  font-weight: bold;
+  font-size: 0.7rem;
+  padding: 2px 5px;
+  overflow: none;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.meme:hover .meme-title{
+  display: block;
 }
